AJAXify email config servlet
Change servlet to use base AdminServlet class and return JSON instead of
refreshing the page. Update component markup to use Angular controller and
SettingsService to make the ajax calls.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
@@ -1,6 +1,5 @@
-<div data-sly-use.email="com.nateyolles.sling.publick.components.admin.EmailConfig" data-sly-unwrap></div>
-
-<div class="row">
+<div class="row" data-ng-controller="SettingsController" data-settings-type="email"
+    data-sly-use.email="com.nateyolles.sling.publick.components.admin.EmailConfig">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -9,63 +8,71 @@
             <div class="panel-body">
                 <form action="/bin/admin/emailconfig" method="post">
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>SMTP Username</label>
-                                <input type="text" name="smtpUsername" data-sly-attribute.value="${email.smtpUsername}" class="form-control">
+                                <input type="text" name="smtpUsername" data-ng-model="model.smtpUsername" data-ng-init="model.smtpUsername = '${email.smtpUsername}'" class="form-control">
                                 <span class="help-block">The username to access your SMTP server.</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>SMTP Password</label>
-                                <input type="password" name="smtpPassword" class="form-control">
+                                <input type="password" name="smtpPassword" data-ng-model="model.smtpPassword" data-ng-init="model.smtpPassword = '${email.smtpPassword}'" class="form-control">
                                 <span class="help-block">The password to access your SMTP server.</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Sender Email</label>
-                                <input type="email" name="sender" data-sly-attribute.value="${email.sender}" class="form-control">
+                                <input type="email" name="sender" data-ng-model="model.sender" data-ng-init="model.sender = '${email.sender}'" class="form-control">
                                 <span class="help-block">The email address to send from. (e.g. sender@mailserver.com)</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Recipient Email</label>
-                                <input type="email" name="recipient" data-sly-attribute.value="${email.recipient}" class="form-control">
+                                <input type="email" name="recipient" data-ng-model="model.recipient" data-ng-init="model.recipient = '${email.recipient}'" class="form-control">
                                 <span class="help-block">The email address to send to. (e.g. recipient@mailserver.com)</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Host</label>
-                                <input type="text" name="host" data-sly-attribute.value="${email.host}" class="form-control">
+                                <input type="text" name="host" data-ng-model="model.host" data-ng-init="model.host = '${email.host}'" class="form-control">
                                 <span class="help-block">The SMTP host server (e.g. email-smtp.us-west-2.amazonaws.com)</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Port</label>
-                                <input type="number" name="port" data-sly-attribute.value="${email.port}" class="form-control">
+                                <input type="number" name="port" data-ng-model="model.port" data-ng-init="model.port = ${email.port || '\'\''}" class="form-control">
                                 <span class="help-block">The SMTP host server port (e.g. 25)</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
-                            <button type="submit" class="btn btn-primary"
+                        <div class="col-xs-12 form-group">
+                            <button type="submit" class="btn btn-primary" data-ng-click="save($event)"
                                     data-sly-attribute.disabled="${!email.authorable && 'disabled'}">Save</button>
+                        </div>
+                    </div>
+                    <div class="row" data-ng-show="status.show">
+                        <div class="col-xs-12">
+                            <div class="alert {{status.type}} alert-dismissible" role="alert">
+                                <button type="button" class="close" aria-label="Close" data-ng-click="hideAlert()"><span aria-hidden="true">&times;</span></button>
+                                <strong data-ng-bind="status.header"></strong> <span data-ng-bind="status.message"></span>
+                            </div>
                         </div>
                     </div>
                 </form>
