--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
@@ -20,7 +20,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label>SMTP Password</label>
-                                <input type="password" name="smtpPassword" data-ng-model="model.smtpPassword" data-ng-init="model.smtpPassword = '${email.smtpPassword}'" class="form-control">
+                                <input type="password" name="smtpPassword" data-ng-model="model.smtpPassword" data-ng-init="model.smtpPassword = '${email.smtpPassword}'" data-ng-focus="clear($event)" class="form-control">
                                 <span class="help-block">The password to access your SMTP server.</span>
                             </div>
                         </div>
