--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
@@ -28,7 +28,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Secret key</label>
-                                <input data-sly-attribute.type="${recaptcha.authorable ? 'text' : 'password'}" name="secretKey" data-ng-model="model.secretKey" data-ng-init="model.secretKey = '${recaptcha.secretKey}'"
+                                <input data-sly-attribute.type="${recaptcha.authorable ? 'text' : 'password'}" name="secretKey" data-ng-model="model.secretKey" data-ng-init="model.secretKey = '${recaptcha.secretKey}'" data-ng-focus="clear($event)"
                                 class="form-control">
                                 <span class="help-block">The secret key used for communication between your site and Google.</span>
                             </div>
