--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
@@ -56,7 +56,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Port</label>
-                                <input type="number" name="port" data-ng-model="model.port" data-ng-init="model.port = ${email.port || '\'\''}" class="form-control">
+                                <input type="number" min="0" name="port" data-ng-model="model.port" data-ng-init="model.port = ${email.port || '\'\''}" class="form-control">
                                 <span class="help-block">The SMTP host server port (e.g. 25)</span>
                             </div>
                         </div>
