--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
@@ -1,4 +1,20 @@
 <div data-ng-controller="CommentController" data-sly-use.page="com.nateyolles.sling.publick.sightly.WCMUse">
+    <script type="text/ng-template" id="confirm.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Delete</h3>
+        </div>
+        <div class="modal-body">
+            <p>Are you sure that you want to delete this comment?</p>
+            <div class="well well-sm">
+                <p data-ng-bind="comment.comment"></p>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()" ${!page.authorable ? 'disabled' : '' @ context='attribute'}>OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+
     <div class="row">
         <div class="col-xs-12">
             <table class="table table-hover">
@@ -23,7 +39,7 @@
                         </td>
                         <td><a href="" data-ng-click="edit()"><i class="glyphicon glyphicon-pencil"></i></a></td>
                         <td><a href="" data-ng-click="akismet()"><i data-ng-class="{'glyphicon glyphicon-remove-sign': !comment.spam, 'glyphicon glyphicon-ok-sign': comment.spam}" tooltip="{{comment.spam ? 'Mark as valid' : 'Mark as spam'}}"></i></a></td>
-                        <td><a href="" data-ng-click="delete()"><i class="glyphicon glyphicon-trash"></i></a></td>
+                        <td><a href="" data-ng-click="delete($index)"><i class="glyphicon glyphicon-trash"></i></a></td>
                     </tr>
                 </tbody>
             </table>
