--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -51,7 +51,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Sample Apache web server redirects</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal-body large">
         <pre>
 &lt;IfModule mod_dir.c&gt;
     DirectorySlash Off
