Add admin ability to mark comments as spam or ham
Add Spam and Ham functions in the comment servlet, which calls the Comment
Service. Add markSpam() and markHam() methods to the Comment Service which calls
the Akamai Service. Update the Akamai services submitSpam and submitHam methods
to accept the comment node ID and update spam and display properties.

Add client-side Akismet functionality to the comment list admin component. Update
the Comment Controller, Comment Modal Controller, and Comment Service to open a
modal, communicate with the server and update the Angular model upon success.
Rearrange the comment list view table.

By marking a comment as spam it be hidden and submitted as spam to Akismet. By
marking a comment as ham it will be shown and submitted as ham to Akismet. If the
user submits spam, it will be hidden to the user but visible to the author with
the option of marking it as ham.

TODO: refactor comment view to use service.
TODO: refactor comment servlet to use service and AJAX.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
@@ -3,11 +3,15 @@
         <div class="modal-header">
             <h3 data-ng-show="deleteMode" class="modal-title">Delete</h3>
             <h3 data-ng-show="editMode" lass="modal-title">Edit</h3>
+            <h3 data-ng-show="spamMode" lass="modal-title">Submit as spam</h3>
+            <h3 data-ng-show="hamMode" lass="modal-title">Submit as ham</h3>
         </div>
         <div class="modal-body">
             <p data-ng-show="deleteMode">Are you sure that you want to delete this comment?</p>
+            <p data-ng-show="spamMode">Are you sure that you want to mark this comment as spam?</p>
+            <p data-ng-show="hamMode">Are you sure that you want to mark this comment as ham (a valid comment)?</p>
             <p data-ng-show="editMode">Edit the comment and click 'OK'.</p>
-            <div class="well well-sm" data-ng-show="deleteMode">
+            <div class="well well-sm" data-ng-show="deleteMode || spamMode || hamMode">
                 <p data-ng-bind="comment.comment"></p>
             </div>
             <textarea class="form-control" rows="3" data-ng-show="editMode" data-ng-model="comment.comment"></textarea>
