--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/commentList/commentList.html
@@ -2,9 +2,9 @@
     <script type="text/ng-template" id="comment.html">
         <div class="modal-header">
             <h3 data-ng-show="deleteMode" class="modal-title">Delete</h3>
-            <h3 data-ng-show="editMode" lass="modal-title">Edit</h3>
-            <h3 data-ng-show="spamMode" lass="modal-title">Submit as spam</h3>
-            <h3 data-ng-show="hamMode" lass="modal-title">Submit as ham</h3>
+            <h3 data-ng-show="editMode" class="modal-title">Edit</h3>
+            <h3 data-ng-show="spamMode" class="modal-title">Submit as spam</h3>
+            <h3 data-ng-show="hamMode" class="modal-title">Submit as ham</h3>
         </div>
         <div class="modal-body">
             <p data-ng-show="deleteMode">Are you sure that you want to delete this comment?</p>
