Add drag and drop upload package to package manager
Remove upload button and add table row with drag and drop angular upload. Update
CSS for that row. Add upload functionality on the client side to the backup
Controller and Backup Service using the Upload module. Remove any upload mentions
from the backup modal controller. Add upload method to the package service and
interface which is called from the backup servlet. Return JSON to update the UI.

--- a/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
+++ b/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
@@ -111,3 +111,17 @@
 .clear {
   clear: both;
 }
+
+.package-upload {
+  border: dashed 1px green;
+  text-align: center;
+  padding: 5px;
+}
+
+.package-upload.hover {
+  background: lightgreen;
+}
+
+.package-upload.hover-error {
+  background: indianred;
+}
