--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
@@ -36,6 +36,7 @@
   <div id="newCommentContainer">
     <div class="row" id="commentForm">
       <form method="POST" action="/bin/publick/addcomment">
+        <input type="hidden" name="_charset_" value="UTF-8" />
         <div class="col-md-6">
           <div class="well">
             <div class="row">
