Display links to all blog posts from every post
Create the Collapsible Blog List component which is a Bootstrap based Sightly
component in the form of an accordion-like widget. The user can drill down to
each blog post by clicking on the year, then the month, then the blog post.

Add the new component to the blog view component in the right rail.

Move the comment component from the page to the blog view in order to facilitate
responsive wrapping where the comments appear above the right rail.

--- a/ui/src/main/resources/jcr_root/etc/clientlibs/foundation/publick/css/publick.css
+++ b/ui/src/main/resources/jcr_root/etc/clientlibs/foundation/publick/css/publick.css
@@ -10,3 +10,30 @@ code.gist {
   padding: 0;
   background: none;
 }
+
+.collapsible-blog-list {
+  box-shadow: none;
+}
+
+.collapsible-blog-list a {
+  border-radius: 4px;
+  color: #337ab7;
+  text-decoration: none;
+}
+
+.collapsible-blog-list a:hover {
+  color: #23527c;
+  text-decoration: underline;
+}
+
+.collapsible-blog-list .sub-menu {
+  margin-left: 25px;
+}
+
+.collapsible-blog-list .collapse-toggle > i:before {
+  content: "\e252";
+}
+
+.collapsible-blog-list .collapse-toggle.collapsed > i:before {
+  content: "\e250";
+}
