Collapsible Blog List display post title rather than name

--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/collapsibleBlogList/collapsibleBlogList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/collapsibleBlogList/collapsibleBlogList.html
@@ -23,7 +23,7 @@
            data-sly-list.post="${month.listChildren}">
           <a class="post list-group-item"
              data-sly-attribute.href="${post.path}.html"
-             data-sly-text="${post.name}"></a>
+             data-sly-text="${post.title}"></a>
       </div>
   </div>
 </div>
