Collapsible Blog List link title
Make link title attribute the post description.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/collapsibleBlogList/collapsibleBlogList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/collapsibleBlogList/collapsibleBlogList.html
@@ -23,6 +23,7 @@
            data-sly-list.post="${month.listChildren}">
           <a class="post list-group-item"
              data-sly-attribute.href="${post.path}.html"
+             data-sly-attribute.title="${post.description}"
              data-sly-text="${post.title}"></a>
       </div>
   </div>
